Few fixes, add lib, add step 2

--- a/NG-Wakanda-Pack/WebFolder/step2.html
+++ b/NG-Wakanda-Pack/WebFolder/step2.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Angular-Wakanda Step 1 - Installation</title>
+  <title>Angular-Wakanda Step 1 - Initialization</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
   <script src="scripts/angular-wakanda.min.js"></script>
   <script src="scripts/step2.js"></script>
 </head>
-<body ng-app="step1">
-  <h1>Angular-Wakanda Step 1 - Installation</h1>
-  <p ng-controller="Controller">angular-wakanda {{loaded}}</p>
+<body ng-app="step2">
+  <h1>Angular-Wakanda Step 2 - Initialization</h1>
+  <p ng-controller="Controller">angular-wakanda {{initialized}}</p>
 </body>
 </html>
