--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -1,1 +1,81 @@
-﻿<!DOCTYPE html><html><head>  <meta charset="utf-8">  <title>NG-Wakanda-Pack</title>  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script></head><body>  <h1>      NG-Wakanda-Pack  </h1>  <p>This solution pack contain several demo pages to learn how to use <strong><a href="http://wakanda.org/angular">angular-wakanda</a></strong></p>  <hr>  <section>    <h2>1 - Get data from a Wakanda Backend in AngularJS</h2>    <table><tbody><tr>      <td>        <p>Thanks to Yeoman and Bower, Wakanda is very easy to integrate into Angular interfaces</p>				<p><img alt="yeoman" src="images/yeoman%20logo.gif" style="width: 80px; height: 88px; float: left;" /><img alt="bower" src="images/bower%20logo.gif" style="width: 80px; height: 80px;" /></p>        <p>Even manually, angular-wakanda only requires a single JS file to include.</p>      </td>      <td>        <div class="tabs">          <ul>		  		  <li><a href="#step1-yeoman">Yeoman</a></li>  					<li><a href="#step1-manual">Manual Integration</a></li>				  </ul>		  		<div id="step1-yeoman">            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/install.sh?footer=minimal"></script>          </div>  				<div id="step1-manual">            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step1.html?slice=8:8&footer=minimal"></script>          </div>        </div>      </td>    </tr></tbody></table>  </section>  <script>    $('.tabs').tabs();  </script></body></html>
+﻿<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+
+  <title>NG-Wakanda-Pack</title>
+
+  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+</head>
+<body>
+  <h1>
+      NG-Wakanda-Pack
+  </h1>
+  <p>This solution pack contain several demo pages to learn how to use <strong><a href="http://wakanda.org/angular">angular-wakanda</a></strong></p>
+  <hr>
+
+  <section>
+    <h2>1 - Integrate angular-wakanda in your project</h2>
+    <table><tbody><tr>
+      <td>
+        <p>Thanks to Yeoman and Bower, Wakanda is very easy to integrate into Angular interfaces</p>
+				<p><img alt="yeoman" src="images/yeoman%20logo.gif" style="width: 80px; height: 88px; float: left;" /><img alt="bower" src="images/bower%20logo.gif" style="width: 80px; height: 80px;" /></p>
+        <p>Even manually, angular-wakanda only requires a single JS file to include.</p>
+      </td>
+      <td>
+        <div class="tabs">
+          <ul>
+		  		  <li><a href="#step2-yeoman">Yeoman</a></li>
+  					<li><a href="#step2-manual">Manual Integration</a></li>
+  					<li><a href="#step3-preview">Preview</a></li>
+				  </ul>
+		  		<div id="step1-yeoman">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/install.sh?footer=minimal"></script>
+          </div>
+  				<div id="step1-manual">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step1.html?slice=8:8&footer=minimal"></script>
+          </div>
+  				<div id="step1-preview">
+            <iframe src="step1.html"></iframe>
+          </div>
+        </div>
+      </td>
+    </tr></tbody></table>
+  </section>
+
+  <section>
+    <h2>2 - Initialize the Wakanda Service</h2>
+    <table><tbody><tr>
+      <td>
+        <p>The Wakanda Service <strong>init(dataClasses)</strong> method lets you choose to load all the available Model (default) or only specified DataClasses</p>
+				<p>It works as a JavaScript Promise. Let's load everything.</p>
+      </td>
+      <td>
+        <div class="tabs">
+          <ul>
+		  		  <li><a href="#step2-HTML">HTML</a></li>
+  					<li><a href="#step2-manual">JS</a></li>
+  					<li><a href="#step2-preview">Preview</a></li>
+				  </ul>
+		  		<div id="step2-yeoman">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step2.html?footer=minimal"></script>
+          </div>
+  				<div id="step2-manual">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step2.js?footer=minimal"></script>
+          </div>
+  				<div id="step2-preview">
+            <iframe src="step2.html"></iframe>
+          </div>
+        </div>
+      </td>
+    </tr></tbody></table>
+  </section>
+
+
+  <script>
+    $('.tabs').tabs();
+  </script>
+</body>
+</html>
