--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -27,9 +27,9 @@
       <td>
         <div class="tabs">
           <ul>
-		  		  <li><a href="#step2-yeoman">Yeoman</a></li>
-  					<li><a href="#step2-manual">Manual Integration</a></li>
-  					<li><a href="#step3-preview">Preview</a></li>
+		  		  <li><a href="#step1-yeoman">Yeoman</a></li>
+  					<li><a href="#step1-manual">Manual Integration</a></li>
+  					<li><a href="#step1-preview">Preview</a></li>
 				  </ul>
 		  		<div id="step1-yeoman">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/install.sh?footer=minimal"></script>
@@ -56,14 +56,14 @@
         <div class="tabs">
           <ul>
 		  		  <li><a href="#step2-HTML">HTML</a></li>
-  					<li><a href="#step2-manual">JS</a></li>
+  					<li><a href="#step2-JS">JS</a></li>
   					<li><a href="#step2-preview">Preview</a></li>
 				  </ul>
-		  		<div id="step2-yeoman">
+		  		<div id="step2-HTML">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step2.html?footer=minimal"></script>
           </div>
-  				<div id="step2-manual">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step2.js?footer=minimal"></script>
+  				<div id="step2-JS">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step2.js?footer=minimal"></script>
           </div>
   				<div id="step2-preview">
             <iframe src="step2.html"></iframe>
