--- a/NG-Wakanda-Pack/WebFolder/step1.html
+++ b/NG-Wakanda-Pack/WebFolder/step1.html
@@ -5,7 +5,7 @@
 
   <title>Angular-Wakanda Step 1 - Installation</title>
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
+  <script src="scripts/angular.min.js"></script>
   <script src="scripts/angular-wakanda.min.js"></script>
   <script src="scripts/step1.js"></script>
 </head>
