--- a/NG-Wakanda-Pack/WebFolder/step1.html
+++ b/NG-Wakanda-Pack/WebFolder/step1.html
@@ -9,8 +9,12 @@
   <script src="scripts/angular-wakanda.min.js"></script>
   <script src="scripts/step1.js"></script>
 </head>
+
 <body ng-app="step1">
+
   <h1>Angular-Wakanda Step 1 - Installation</h1>
-  <p ng-controller="Controller">angular-wakanda {{loaded}}</p>
+
+  <p ng-controller="Controller">angular-wakanda <strong>{{loaded}}</strong></p>
+
 </body>
 </html>
