--- a/NG-Wakanda-Pack/WebFolder/step2.html
+++ b/NG-Wakanda-Pack/WebFolder/step2.html
@@ -9,8 +9,12 @@
   <script src="scripts/angular-wakanda.min.js"></script>
   <script src="scripts/step2.js"></script>
 </head>
+
 <body ng-app="step2">
+
   <h1>Angular-Wakanda Step 2 - Initialization</h1>
-  <p ng-controller="Controller">angular-wakanda {{initialized}}</p>
+
+  <p ng-controller="Controller">angular-wakanda <strong>{{initialized}}</strong></p>
+
 </body>
 </html>
