test commit with step 4 and demo
restore angular- wakanda to v0.0.1

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -24,8 +24,8 @@
     <table><tbody><tr>
       <td>
         <h2>1 - Integrate angular-wakanda in your project</h2>
-        <p>Thanks to Yeoman and Bower, Wakanda is very easy to integrate into Angular interfaces</p>
-				<p><img alt="yeoman" src="images/yeoman%20logo.gif" style="width: 80px; height: 88px; float: left;" /><img alt="bower" src="images/bower%20logo.gif" style="width: 80px; height: 80px;" /></p>
+        <p>Thanks to Bower, Wakanda is very easy to integrate into Angular interfaces</p>
+				<p><!--img alt="yeoman" src="images/yeoman%20logo.gif" style="width: 80px; height: 88px; float: left;" /--><img alt="bower" src="images/bower%20logo.gif" style="width: 80px; height: 80px;" /></p>
         <p>Even manually, angular-wakanda only requires a single JS file to include.</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step1.html?slice=8:8&footer=minimal"></script>
       </td>
@@ -96,7 +96,7 @@
   					<li><a href="#step3-JS">JS</a></li>
 		  		  <li><a href="#step3-HTML">HTML</a></li>
   					<li><a href="#step3-preview">Preview</a></li>
-		  		  <li><a href="#step3-JSON">Server Country DataClass</a></li>
+		  		  <li><a href="#step3-JSON">Country DataClass</a></li>
 				  </ul>
   				<div id="step3-JS">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step3.js?footer=minimal"></script>
@@ -109,6 +109,34 @@
           </div>
   				<div id="step3-JSON">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Model.waModel?slice=106:142&footer=minimal"></script>
+          </div>
+        </div>
+      </td>
+    </tr></tbody></table>
+  </section>
+
+  <section>
+    <table><tbody><tr>
+      <td>
+        <h2>4 - Get related data out of the box</h2>
+        <p>No joins, no foreign keys, no map-reduce... Get access to related data directly through your entity object properties</p>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?slice=16:16&footer=minimal"></script>
+      </td>
+      <td>
+        <div class="tabs">
+          <ul>
+  					<li><a href="#step4-JS">JS</a></li>
+		  		  <li><a href="#step4-HTML">HTML</a></li>
+  					<li><a href="#step4-preview">Preview</a></li>
+				  </ul>
+  				<div id="step4-JS">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?footer=minimal"></script>
+          </div>
+		  		<div id="step4-HTML">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step4-final.html?footer=minimal"></script>
+          </div>
+  				<div id="step4-preview">
+            <iframe src="step4.html"></iframe>
           </div>
         </div>
       </td>
