--- a/NG-Wakanda-Pack/WebFolder/step2.html
+++ b/NG-Wakanda-Pack/WebFolder/step2.html
@@ -14,7 +14,10 @@
 
   <h1>Angular-Wakanda Step 2 - Initialization</h1>
 
-  <p ng-controller="Controller">angular-wakanda <strong>{{initialized}}</strong></p>
+  <div ng-controller="Controller">
+    <p>angular-wakanda <strong>{{initialized}}</strong></p>
+    <p>Available DataClasses: {{dataClasses}}</p>
+  </div>
 
 </body>
 </html>
