--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -162,7 +162,7 @@
       <td>
         <h2>5 - Modify your data</h2>
         <p>Each Wakanda DataClass provides a <strong><code>$create()</code></strong> method</p>
-        <p>Each received Wakanda entities comes with its <strong><code>$update()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
+        <p>Each received Wakanda entities comes with its <strong><code>$save()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step5-final.js?slice=15:15&footer=minimal"></script>
       </td>
       <td>
