--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -63,7 +63,7 @@
     <table><tbody><tr>
       <td>
         <h2>2 - Initialize the Wakanda Service</h2>
-        <p>The Wakanda Service <strong><code>init(dataClasses)</code></strong> method lets you choose to load all the available Model (default) or only specified DataClasses</p>
+        <p>The Wakanda Service <strong><code>init()</code></strong> method lets you choose to load all the available Model (default) or only specified DataClasses</p>
 				<p>It works as a JavaScript Promise. Let's load everything.</p>
 				<p>This Wakanda project provides 3 DataClasses (Country, Company, and Employee), all designed in pure JS in Wakanda.</p>
         <p>The Wakanda Model can be designed very easily either <a href="http://doc.wakanda.org/Wakanda-Studio-Reference-Guide/Datastore-Model-Designer.200-305081.en.html" target="_blank">graphically</a> or <a href="http://doc.wakanda.org/Model/Model.100-975773.en.html" target="_blank">programmatically</a> in pure JavaScript.
@@ -94,7 +94,7 @@
       <td>
         <h2>3 - Get your Data in One line</h2>
         <p><a href="http://wakanda.org/angular" target="_blank">angular-wakanda</a> lets you have all your Wakanda Model usable directly from Angular based Web Application interfaces.</p>
-        <p>Once initialized, integrating your defined Business JS Objects into your angular scopes is as simple as this <strong>$find(options)</strong> method.</p>
+        <p>Once initialized, integrating your defined Business JS Objects into your angular scopes is as simple as this <strong>$find()</strong> method.</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step3-final.js?slice=10:10&footer=minimal"></script>
       </td>
       <td>
@@ -130,7 +130,7 @@
         <p>Get access to related data directly through your entity object properties</p>
         <p>All you have to do is to tell angular-wakanda when you want to load it locally with this related property <strong><code>$fetch()</code></strong> method</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?slice=15:15&footer=minimal"></script>
-        <p>Thanks to the Wakanda <a href="http://doc.wakanda.org/Attributes.300-574626.en.html" target="_blank">alias attributes</a>, this example shows the company manager fullname without even fetching the related Manager</p>
+        <p>Thanks to the Wakanda <a href="http://doc.wakanda.org/Attributes.300-574626.en.html" target="_blank"><strong>alias attributes</strong></a>, this example shows the company manager fullname without even fetching the related Manager</p>
       </td>
       <td>
         <div class="tabs">
@@ -163,7 +163,7 @@
         <h2>5 - Modify your data</h2>
         <p>Each Wakanda DataClass provides a <strong><code>$create()</code></strong> method</p>
         <p>Each received Wakanda entities comes with its <strong><code>$save()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?slice=27:27&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5-final.html?slice=26:27&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -180,10 +180,38 @@
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step5.js?footer=minimal"></script>
           </div>
 		  		<div id="step5-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5-final.html?footer=minimal"></script>
           </div>
   				<div id="step5-JSON">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Model.waModel?slice=151:315&footer=minimal"></script>
+          </div>
+        </div>
+      </td>
+    </tr></tbody></table>
+  </section>
+
+
+  <section>
+    <table><tbody><tr>
+      <td>
+        <h2>6 - Enjoy Demos</h2>
+        <p>Enjoy the more advanced demos and get help from <a href="#">the documentation</a> when necessary</p>
+      </td>
+      <td>
+        <div class="tabs">
+          <ul>
+		  		  <li><a href="#step6-todo">Todo Demo</a></li>
+  					<li><a href="#step6-bootstrap">Bootstrap Demo</a></li>
+  					<li><a href="#step6-ios">iOS 7 Demo</a></li>
+				  </ul>
+  				<div id="step6-todo">
+            <a href="todo.html" target="_blank"><img src="images/screenshot-todo.png"></a>
+          </div>
+  				<div id="step6-bootstrap">
+            <a href="demo.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
+          </div>
+		  		<div id="step6-ios">
+            <a href="ios.html" target="_blank"><img src="images/screenshot-ios.png"></a>
           </div>
         </div>
       </td>
