--- a/NG-Wakanda-Pack/WebFolder/step4.html
+++ b/NG-Wakanda-Pack/WebFolder/step4.html
@@ -1,1 +1,46 @@
-﻿<!DOCTYPE html><html><head>  <meta charset="utf-8">  <title>Angular-Wakanda Step 4 - Getting related Data</title>  <script src="scripts/angular.min.js"></script>  <script src="scripts/angular-wakanda.min.js"></script>  <script src="scripts/step4.js"></script></head><body ng-app="step4">  <h1>Angular-Wakanda Step 4 - Getting related Data</h1>  <section ng-controller="Controller">    <p>      {{countries.length}} countries found:      <select ng-model="country" ng-options="c.name for c in countries">        <option value="">-- select a country to see its related companies --</option>      </select>    </p>    <div ng-show="country">      <p>Its country code is <strong>{{country.code}}</strong></p>      <p>        {{companies.length}} companies are located there:        <select ng-model="company" ng-options="c.name for c in companies">          <option value="">-- select a company to see its details --</option>        </select>      </p>      <p ng-show="company">Its manager name is <strong>{{company.managerName}}</strong></p>    </div>  </section>  <!-- Marketo Analytics -->  <script type="text/javascript" id="marketoAnalytics">      document.write(unescape("%3Cscript src='" + document.location.protocol + "//munchkin.marketo.net/munchkin.js' type='text/javascript'%3E%3C/script%3E"));  </script>  <script>      var Munchkin;      if (Munchkin) {          Munchkin.init('531-MRT-468');      }  </script></body></html>
+﻿<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+
+  <title>Angular-Wakanda Step 4 - Getting related Data</title>
+
+  <script src="scripts/angular.min.js"></script>
+  <script src="scripts/angular-wakanda.min.js"></script>
+  <script src="scripts/step4.js"></script>
+</head>
+
+<body ng-app="step4">
+  <h1>Angular-Wakanda Step 4 - Getting related Data</h1>
+
+  <section ng-controller="Controller">
+    <p>
+      {{countries.length}} countries found:
+      <select ng-model="country" ng-options="c.name for c in countries">
+        <option value="">-- select a country to see its related companies --</option>
+      </select>
+    </p>
+    <div ng-show="country">
+      <p>Its country code is <strong>{{country.code}}</strong></p>
+      <p>
+        {{companies.length}} companies are located there:
+        <select ng-model="company" ng-options="c.name for c in companies">
+          <option value="">-- select a company to see its details --</option>
+        </select>
+      </p>
+      <p ng-show="company">Its manager name is <strong>{{company.managerName}}</strong></p>
+    </div>
+  </section>
+
+  <!-- Marketo Analytics -->
+  <script type="text/javascript" id="marketoAnalytics">
+      document.write(unescape("%3Cscript src='" + document.location.protocol + "//munchkin.marketo.net/munchkin.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script>
+      var Munchkin;
+      if (Munchkin) {
+          Munchkin.init('531-MRT-468');
+      }
+  </script>
+</body>
+</html>
