README & DOC updates

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -195,7 +195,7 @@
     <table><tbody><tr>
       <td>
         <h2>6 - Enjoy Demos</h2>
-        <p>Enjoy the more advanced demos and get help from <a href="#">the documentation</a> when necessary</p>
+        <p>Enjoy the more advanced demos and get help from <a href="https://github.com/AMorgaut/NG-Wakanda-Pack/blob/master/API-DOC.md">the documentation</a> when necessary</p>
       </td>
       <td>
         <div class="tabs">
