Add visit analytics

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -225,5 +225,33 @@
   <script>
     $('.tabs').tabs();
   </script>
+  <!-- Google Analytics -->
+  <script type="text/javascript" id="googleAnalytics">
+      var _gaq = _gaq || [];
+      var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+      _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
+      _gaq.push(['_setAccount', 'UA-48898987-X']);
+      _gaq.push(['_setDomainName', 'wakanda.org']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+          var ga = document.createElement('script');
+          ga.type = 'text/javascript';
+          ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(ga, s);
+      })();
+  </script>
+  <!-- Marketo Analytics -->
+  <script type="text/javascript" id="marketoAnalytics">
+      document.write(unescape("%3Cscript src='" + document.location.protocol + "//munchkin.marketo.net/munchkin.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script>
+      var Munchkin;
+      if (Munchkin) {
+          Munchkin.init('531-MRT-468');
+      }
+  </script>
 </body>
 </html>
