--- a/NG-Wakanda-Pack/WebFolder/step5.html
+++ b/NG-Wakanda-Pack/WebFolder/step5.html
@@ -6,7 +6,7 @@
   <title>Angular-Wakanda Step 5 - Modify your Data</title>
 
   <script src="scripts/angular.min.js"></script>
-  <script src="scripts/angular-wakanda.min.js"></script>
+  <script src="scripts/angular-wakanda-connector.debug.min.js"></script>
   <script src="scripts/step5.js"></script>
 </head>
 
