update photo url using newly available src property

--- a/NG-Wakanda-Pack/WebFolder/demo.html
+++ b/NG-Wakanda-Pack/WebFolder/demo.html
@@ -91,7 +91,7 @@
           </div>
           <div  class="panel-body">
             <p>From <strong>{{current.Employee.fullName}}</strong></p>
-            <p><img ng-src="{{current.Employee.photo.__deferred.uri}}" class="img-thumbnail"></p>
+            <p><img ng-src="{{current.Employee.photo.src}}" class="img-thumbnail"></p>
             <p><strong>First Name</strong>: {{current.Employee.firstName}}</p>
             <p><strong>Last Name</strong>: {{current.Employee.lastName}}</p>
             <p><strong>Title</strong>: {{current.Employee.title}}</p>
