--- a/NG-Wakanda-Pack/WebFolder/step5.html
+++ b/NG-Wakanda-Pack/WebFolder/step5.html
@@ -6,7 +6,7 @@
   <title>Angular-Wakanda Step 5 - Modify your Data</title>
 
   <script src="scripts/angular.min.js"></script>
-  <script src="scripts/angular-wakanda-connector.debug.min.js"></script>
+  <script src="scripts/angular-wakanda.min.js"></script>
   <script src="scripts/step5.js"></script>
 </head>
 
@@ -14,7 +14,7 @@
   <h1>Angular-Wakanda Step 5 - Modify your Data</h1>
 
   <section ng-controller="Controller">
-    <img ng-show="employee" ng-src="{{employee.photo.__deferred.uri}}" style="float:right;width:80px; height:120px;">
+    <img ng-show="employee" ng-src="{{employee.photo.src}}" style="float:right;width:80px; height:120px;">
     <p>
       {{employees.length}} employees found:
       <select ng-model="employee" ng-options="emp.fullName for emp in employees">
