--- a/NG-Wakanda-Pack/WebFolder/demo.html
+++ b/NG-Wakanda-Pack/WebFolder/demo.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular-Wakanda - Play (alpha1)</title>
+    <title>Angular-Wakanda - Play (beta 1)</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/demo.css">
@@ -13,7 +13,7 @@
   <body ng-controller="PlayController">
 
     <header class="container-fluid page-header">
-      <h1>Angular-Wakanda - Play (alpha1)</h1>
+      <h1>Angular-Wakanda - Play (beta 1)</h1>
     </header>
 
     <div id="main" class="row container-fluid page-body">
